--- a/followtheleader.html
+++ b/followtheleader.html
@@ -9,9 +9,20 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <a href="index.html"
-            ><img width="32px" height="32px" src="images/arrow.png" alt="back"
-        /></a>
+        <a href="index.html#album3"
+            ><div>
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="50px"
+                    viewBox="0 -960 960 960"
+                    width="50px"
+                    fill="#e3e3e3"
+                >
+                    <path
+                        d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
+                    />
+                </svg></div
+        ></a>
         <div class="fatboy">
             <div class="cover">
                 <a
@@ -26,72 +37,72 @@
                 <a
                     class="followtrack"
                     href="https://youtu.be/fdi173iq-DQ?si=f9lrqEcGfqsNp25X"
-                    >13.It's On!</a
+                    >13. It's On!</a
                 >
                 <a
                     class="followtrack"
                     href="https://youtu.be/jRGrNDV2mKc?si=q-tlxG8WX4-_rpkf"
-                    >14.Freak On a Leash</a
+                    >14. Freak On a Leash</a
                 >
                 <a
                     class="followtrack"
                     href="https://youtu.be/VAWjsVoDpm0?si=9l6kQfEcBAjojHgZ"
-                    >15.Got the Life</a
+                    >15. Got the Life</a
                 >
                 <a
                     class="followtrack"
                     href="https://youtu.be/6j6-elqb2Wc?si=LBo2ICRxOprYHLbH"
-                    >16.Dead Bodies Everywhere
+                    >16. Dead Bodies Everywhere
                 </a>
                 <a
                     class="followtrack"
                     href="https://youtu.be/cx5cLTlrRG0?si=IT2ZXSEhEF1dGXS8"
-                    >17.Children of the Korn (feat. Ice Cube)</a
+                    >17. Children of the Korn (feat . Ice Cube)</a
                 >
                 <a
                     class="followtrack"
                     href="https://youtu.be/SQre8iITpco?si=Zni9RNbYuYqEOB1f"
-                    >18.B.B.K.
+                    >18. B . B . K .
                 </a>
                 <a
                     class="followtrack"
                     href="https://youtu.be/14yLqza7n9Y?si=_yt76dLORYLVVdFv"
-                    >19.Pretty</a
+                    >19. Pretty</a
                 >
                 <a
                     class="followtrack"
                     href="https://youtu.be/QCrbErzHD0g?si=c0OW5oPdx1nVa2td"
-                    >20.All in the Family (feat. Fred Durst)</a
+                    >20. All in the Family (feat . Fred Durst)</a
                 >
                 <a
                     class="followtrack"
                     href="https://youtu.be/C-o8TNGN4hU?si=StBOBoC7_lFXa1XD"
-                    >21.Reclaim My Place</a
+                    >21. Reclaim My Place</a
                 >
                 <a
                     class="followtrack"
                     href="https://youtu.be/1RX_ZzbptoU?si=iciGXesHFGGk3bIy"
-                    >22.Justin</a
+                    >22. Justin</a
                 >
                 <a
                     class="followtrack"
                     href="https://youtu.be/mj4zZ-HdG_Q?si=6pqNlz2uxYijYqQw"
-                    >23.Seed</a
+                    >23. Seed</a
                 >
                 <a
                     class="followtrack"
                     href="https://youtu.be/d0PdI2IFQvM?si=qn-aXEoGkwEUjky8"
-                    >24.Cameltosis (feat. Slimkid3)</a
+                    >24. Cameltosis (feat . Slimkid3)</a
                 >
                 <a
                     class="followtrack"
                     href="https://youtu.be/68YDxUWvWSo?si=eJcfHiJVn7VDJfFM"
-                    >25.My Gift to You</a
+                    >25. My Gift to You</a
                 >
                 <a
                     class="followtrack"
                     href="https://youtu.be/sSyoZ9ZfWuE?si=ZHhJ9Fh43o5rRFgk"
-                    >26.Earache My Eye</a
+                    >26. Earache My Eye</a
                 >
             </div>
         </div>
