--- a/issues.html
+++ b/issues.html
@@ -9,9 +9,20 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <a href="index.html"
-            ><img width="32px" height="32px" src="images/arrow.png" alt="back"
-        /></a>
+        <a href="index.html#album4"
+            ><div>
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="50px"
+                    viewBox="0 -960 960 960"
+                    width="50px"
+                    fill="#e3e3e3"
+                >
+                    <path
+                        d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
+                    />
+                </svg></div
+        ></a>
         <div class="fatboy">
             <div class="cover">
                 <a
@@ -26,82 +37,82 @@
                 <a
                     class="issuetrack"
                     href="https://youtu.be/IQhVTcH6Hy0?si=q-hNnXS1WUeY2xyD"
-                    >1.Dead</a
+                    >1. Dead</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/2s3iGpDqQpQ?si=Qgr_AZz-Ri7Xgegx"
-                    >2.Falling Away From Me</a
+                    >2. Falling Away From Me</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/oH9qfBQZYSo?si=JQGwg6t6zbE05uqk"
-                    >3.Trash</a
+                    >3. Trash</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/BnfixOKISzc?si=O66l6iO2DyByyLI8"
-                    >4.4U</a
+                    >4. 4U</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/1_tuNHEl-Do?si=2q3u6j6iBxaF10Y5"
-                    >5.Beg for Me</a
+                    >5. Beg for Me</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/ujEph5vFwmc?si=y45VUHKcd2g5AZui"
-                    >6.Make Me Bad</a
+                    >6. Make Me Bad</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/gf1syDprBII?si=6yn9_WtpRw98PfZ7"
-                    >7.It's Gonna Go Away</a
+                    >7. It's Gonna Go Away</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/wU6pxz8oCdQ?si=j-reDMTXgvhpkoak"
-                    >8.Wake Up</a
+                    >8. Wake Up</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/hDSz_9l4xgU?si=5foYa0IU3_dTH4GD"
-                    >9.Am I Going Crazy</a
+                    >9. Am I Going Crazy</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/5Ez17h1EkK8?si=FO0-ueXq72AY07sP"
-                    >10.Hey Daddy</a
+                    >10. Hey Daddy</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/FBEE-t-uyI0?si=XoWBiS26iAPtaLsZ"
-                    >11.Somebody Someone</a
+                    >11. Somebody Someone</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/OXgOSyLSydk?si=uoKr11Pmg170DeYp"
-                    >12.No Way</a
+                    >12. No Way</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/nDKptWMsWSU?si=IxFtly42rWm-FrUG"
-                    >13.Let's Get This Party Started</a
+                    >13. Let's Get This Party Started</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/ecapikEoLio?si=CX1OhrfJLm-3UAfT"
-                    >14.Wish You Could Be Me</a
+                    >14. Wish You Could Be Me</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/Sq8JphupxhY?si=bqJMXPZ6sF9UfihD"
-                    >15.Counting</a
+                    >15. Counting</a
                 >
                 <a
                     class="issuetrack"
                     href="https://youtu.be/dLdk7ykYg-s?si=osgyehRqfHdYmiB8"
-                    >16.Dirty</a
+                    >16. Dirty</a
                 >
             </div>
         </div>
