--- a/lifeispeachy.html
+++ b/lifeispeachy.html
@@ -8,9 +8,20 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <a href="index.html"
-            ><img width="32px" height="32px" src="images/arrow.png" alt="back"
-        /></a>
+        <a href="index.html#album2"
+            ><div>
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="50px"
+                    viewBox="0 -960 960 960"
+                    width="50px"
+                    fill="#e3e3e3"
+                >
+                    <path
+                        d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
+                    />
+                </svg></div
+        ></a>
         <div class="fatboy">
             <div class="cover">
                 <a
@@ -25,72 +36,72 @@
                 <a
                     class="lifetrack"
                     href="https://youtu.be/TcePkwagNFA?si=-8BNNMHn_8sj2OLg"
-                    >1.Twist</a
+                    >1. Twist</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/QsPK8DoaoVc?si=6NIADpZTFkyKiLOs"
-                    >2.Chi</a
+                    >2. Chi</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/_q66WvG_2Iw?si=oF9zqEvBsSPg9Si9"
-                    >3.Lost</a
+                    >3. Lost</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/jL6CMoppBs8?si=pvLy7ld11mXwyURw"
-                    >4.Swallow</a
+                    >4. Swallow</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/KEyxr6skDZU?si=pFZDarowNanjQUCu"
-                    >5.Porno Creep</a
+                    >5. Porno Creep</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/GHkUCSeTi2I?si=0QShjZS3rdyqIbO4"
-                    >6.Good God</a
+                    >6. Good God</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/pmfGkYKHQ3E?si=_RVtxyPsTD40iZ_A"
-                    >7.Mr.Rogers</a
+                    >7. Mr . Rogers</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/RuzyoMFmLbo?si=uQiGaI8JrV1BP9fh"
-                    >8.K@#*%!</a
+                    >8. K@#*%!</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/_315nDk5Qao?si=Rqxk4OQ2u9bIV46Y"
-                    >9.No Place To Hide</a
+                    >9. No Place To Hide</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/dG3uPqEdGik?si=GGsB8UiBNnY2Bpz5"
-                    >10.Wicked (feat. Chino Moreno)</a
+                    >10. Wicked (feat. Chino Moreno)</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/hXHUSTrBoEM?si=uJUTyClw9pbKfgBB"
-                    >11.A.D.I.D.A.S</a
+                    >11. A . D . I . D . A . S</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/B45DxZGv5_w?si=_FmwJNDK6WrNuYbc"
-                    >12.Lowrider</a
+                    >12. Lowrider</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/So5FaZ6nkNY?si=KTAFdiPZHtTgCgKB"
-                    >13.Ass Itch</a
+                    >13. Ass Itch</a
                 >
                 <a
                     class="lifetrack"
                     href="https://youtu.be/FHxys8pM_G4?si=F2IcC0Hp5cRodXA5"
-                    >14.Kill You</a
+                    >14. Kill You</a
                 >
             </div>
         </div>
