--- a/seeyouontheotherside.html
+++ b/seeyouontheotherside.html
@@ -9,9 +9,20 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <a href="index.html"
-            ><img width="32px" height="32px" src="images/arrow.png" alt="back"
-        /></a>
+        <a href="index.html#album7"
+            ><div>
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="50px"
+                    viewBox="0 -960 960 960"
+                    width="50px"
+                    fill="#e3e3e3"
+                >
+                    <path
+                        d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
+                    />
+                </svg></div
+        ></a>
         <div class="fatboy">
             <div class="cover">
                 <a
@@ -26,77 +37,77 @@
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/dGTMYYMwjUw?si=UfIQ_dNN5YhmIBuE"
-                    >1.Twisted Transistor</a
+                    >1. Twisted Transistor</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/JEIhpFp2F78?si=pZczaokmRmrLlsmu"
-                    >2.Politics</a
+                    >2. Politics</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/zGfXoCu0ehY?si=_wPA9Vy9Lpl4oLkx"
-                    >3.Hypocrites</a
+                    >3. Hypocrites</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/LhnERKV06Rk?si=V31PWE9rc8Ir0S19"
-                    >4.Souvenir</a
+                    >4. Souvenir</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/qihGtKxfoZU?si=cBxo7GvqC_gXx8MV"
-                    >5.10 or a 2-Way</a
+                    >5. 10 or a 2-Way</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/47WwsBc_IGI?si=zVZbSKO93p7rejd_"
-                    >6.Throw Me Away</a
+                    >6. Throw Me Away</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/29-WOUdjx5Y?si=m0_1DRw_PVfHXdnU"
-                    >7.Love Song</a
+                    >7. Love Song</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/SvDd5dMJQqU?si=qoEOCYsgtbIsSOcN"
-                    >8.Open Up</a
+                    >8. Open Up</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/CSJXle3LP_Q?si=lcYNMSLaiMD6-KQw"
-                    >9.Coming Undone</a
+                    >9. Coming Undone</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/oDxG833diao?si=DRSywYKCitH-5b6V"
-                    >10.Getting Off</a
+                    >10. Getting Off</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/konyNLjl6cs?si=gJnQWqm7xF3Z1q2F"
-                    >11.Liar</a
+                    >11. Liar</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/y2JiPY7Amsk?si=6gLDhUxddYgu81jC"
-                    >12.For No One</a
+                    >12. For No One</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/Qy-V5EFtfLM?si=E91u6vwkqNZOxwLg"
-                    >13.Seen It All</a
+                    >13. Seen It All</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/CAiHbBgDpS4?si=ytxp9bMhOE-qF494"
-                    >14.Teerjaker</a
+                    >14. Teerjaker</a
                 >
                 <a
                     class="seeyoutrack"
                     href="https://youtu.be/QJp5CM5mNwk?si=oRumrHWGU-gwfJwu"
-                    >15.Last Legal Drug</a
+                    >15. Last Legal Drug</a
                 >
             </div>
         </div>
