--- a/selftitle.html
+++ b/selftitle.html
@@ -9,13 +9,20 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <a href="index.html"
-            ><img
-                width="32px"
-                height="32px"
-                src="images/arrow.png"
-                alt="selftitle"
-        /></a>
+        <a href="index.html#album"
+            ><div>
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="50px"
+                    viewBox="0 -960 960 960"
+                    width="50px"
+                    fill="#e3e3e3"
+                >
+                    <path
+                        d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
+                    />
+                </svg></div
+        ></a>
         <div class="fatboy">
             <div class="cover">
                 <a
@@ -30,62 +37,62 @@
                 <a
                     class="selftrack"
                     href="https://youtu.be/SGK00Q7xx-s?si=JEmyl_nLJvx58mMI"
-                    >1.Blind</a
+                    >1. Blind</a
                 >
                 <a
                     class="selftrack"
                     href="https://youtu.be/gQsfIn7_lQQ?si=d7C_wbEzUc9-UQZJ"
-                    >2.Ball Tongue</a
+                    >2. Ball Tongue</a
                 >
                 <a
                     class="selftrack"
                     href="https://youtu.be/IBUHCdIVEfE?si=9l4vhBVWh1sobNII"
-                    >3.Need To</a
+                    >3. Need To</a
                 >
                 <a
                     class="selftrack"
                     href="https://youtu.be/Fs_E9TP6cvE?si=i1c_p6MuvIFIlJlx"
-                    >4.Clown</a
+                    >4. Clown</a
                 >
                 <a
                     class="selftrack"
                     href="https://youtu.be/HDNcwfdSlhQ?si=ZrHUlDHAawik3HCN"
-                    >5.Divine</a
+                    >5. Divine</a
                 >
                 <a
                     class="selftrack"
                     href="https://youtu.be/4LsZt6z4_0I?si=Swi35lAQMc1rtIpE"
-                    >6.Faget</a
+                    >6. Faget</a
                 >
                 <a
                     class="selftrack"
                     href="https://youtu.be/ZU2k-U2Ze0o?si=fnU6luPzLQ01F_oN"
-                    >7.Shoots and Ladders</a
+                    >7. Shoots and Ladders</a
                 >
                 <a
                     class="selftrack"
                     href="https://youtu.be/e2P8bMN1E70?si=FcfiZlpGDf9xJCX7"
-                    >8.Predictable</a
+                    >8. Predictable</a
                 >
                 <a
                     class="selftrack"
                     href="https://youtu.be/h0UsrRaGMh4?si=z2rf0gAQsEjZltQO"
-                    >9.Fake</a
+                    >9. Fake</a
                 >
                 <a
                     class="selftrack"
                     href="https://youtu.be/Rh6Zeru9tQM?si=s-86j1C2XhfwVqgk"
-                    >10.Lies</a
+                    >10. Lies</a
                 >
                 <a
                     class="selftrack"
                     href="https://youtu.be/X2sELSweNoQ?si=ifvhvz8SMNws_R6n"
-                    >11.Helmet in the Bush</a
+                    >11. Helmet in the Bush</a
                 >
                 <a
                     class="selftrack"
                     href="https://youtu.be/zQZodBV39F4?si=fW_sjIqiN_Yu0Wx8"
-                    >12.Daddy</a
+                    >12. Daddy</a
                 >
             </div>
         </div>
