--- a/takealookinthemirror.html
+++ b/takealookinthemirror.html
@@ -9,9 +9,20 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <a href="index.html"
-            ><img width="32px" height="32px" src="images/arrow.png" alt="back"
-        /></a>
+        <a href="index.html#album6"
+            ><div>
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    height="50px"
+                    viewBox="0 -960 960 960"
+                    width="50px"
+                    fill="#e3e3e3"
+                >
+                    <path
+                        d="M440-240 200-480l240-240 56 56-183 184 183 184-56 56Zm264 0L464-480l240-240 56 56-183 184 183 184-56 56Z"
+                    />
+                </svg></div
+        ></a>
         <div class="fatboy">
             <div class="cover">
                 <a
@@ -26,67 +37,67 @@
                 <a
                     class="taketrack"
                     href="https://youtu.be/VRPxao3e_jY?si=PUuJ6C07s9HbIhq1"
-                    >1.Right Now</a
+                    >1. Right Now</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/Hvcprph-Va4?si=JWA51wXVQHkr_46M"
-                    >2.Break Some Off</a
+                    >2. Break Some Off</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/E0FKGj_zdBE?si=pwnxDsDwFu19yvmT"
-                    >3.Counting on Me</a
+                    >3. Counting on Me</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/7myo3-hNY8M?si=PmPh2WgaU3FUTbtl"
-                    >4.Here It Comes Again</a
+                    >4. Here It Comes Again</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/XWp4Fm4XrB0?si=euSpxVk2imLn5Nlw"
-                    >5.Deep Inside</a
+                    >5. Deep Inside</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/xmOOGeZE-aE?si=UVc8V5XILUNWdu4O"
-                    >6.Did My Time</a
+                    >6. Did My Time</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/Y70T6m6_c7o?si=rpgncQvUzqwQGssS"
-                    >7.Everything I've Known</a
+                    >7. Everything I've Known</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/EXUhfRLaoBs?si=mMVP6-eWfJVyvJii"
-                    >8.Play Me (feat.Nas)</a
+                    >8. Play Me (feat.Nas)</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/CA-8d1FDo14?si=qj_np4z5BgZFG1uQ"
-                    >9.Alive</a
+                    >9. Alive</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/rXkSLhz185k?si=jWzrsQf0rLLBWXk3"
-                    >10.Let's Do This Now</a
+                    >10. Let's Do This Now</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/RGSHTt4soFs?si=ppHXYgFNlwbua_QM"
-                    >11.I'm Done</a
+                    >11. I'm Done</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/ECE27vtp4WU?si=KUGC7cV171rbXdbv"
-                    >12.Y'all Want a Single</a
+                    >12. Y'all Want a Single</a
                 >
                 <a
                     class="taketrack"
                     href="https://youtu.be/ASuIOk6u9MU?si=LXEByh145tqUq0EC"
-                    >13.When Will This End</a
+                    >13. When Will This End</a
                 >
             </div>
         </div>
